--- a/frontend/src/styles/dashboard.module.css
+++ b/frontend/src/styles/dashboard.module.css
@@ -141,8 +141,8 @@
 .fileGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 12px;
-    row-gap: 20px;
+    column-gap: 5px;
+    row-gap: 12px;
     padding-bottom: 48px;
 }
 
